criação de infos-bar e responsividade

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,25 @@
             <p class="hero__text">
                 O maior jogo de história e aventura vai ganhar uma continuação! 
             </p>
+            <div class="infos-bar">
+                <ul class="infos-bar__infos">
+                    <li class="infos-bar__infos__item">
+                        <b>Desenvolvedora</b>
+                        CD Project Red
+                    </li>
+                    <li class="infos-bar__infos__item">
+                        <b>Protagonista</b>
+                        Leoazinha de Cintra
+                    </li>
+                    <li class="infos-bar__infos__item">
+                        <B>Data de lançamento</B>
+                        ??/??/2025
+                    </li>
+                </ul>
+                <a href="https://www.thewitcher.com/us/pt-br/" class="button button--primary">
+                    Página oficial
+                </a>
+            </div>
         </div>
     </header>
 
