criação de primeiro gradiente e ajustando responsividade

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,17 @@
         </div>
     </header>
 
+    <section class="event">
+        <div class="container">
+            <div class="event__details">
+                <h2 class="event__details__title">Suposições</h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum repudiandae molestias a aliquid molestiae, doloremque quos accusantium qui, sequi dicta cumque quidem. Autem dolorem rem molestias impedit error quis iure!
+                </p>
+            </div>
+            <img class="event__image" src="./images/suposicoes.png" alt="suposicoes">
+        </div>
+    </section>
 
 </body>
 </html>
