--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
                     </li>
                     <li class="infos-bar__infos__item">
                         <B>Data de lançamento</B>
-                        ??/??/2025
+                        ??/??/202?
                     </li>
                 </ul>
                 <a href="https://www.thewitcher.com/us/pt-br/" class="button button--primary">
@@ -38,15 +38,48 @@
         </div>
     </header>
 
-    <section class="event">
+    <section class="event event--frontend">
         <div class="container">
             <div class="event__details">
                 <h2 class="event__details__title">Suposições</h2>
                 <p class="event__details__description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum repudiandae molestias a aliquid molestiae, doloremque quos accusantium qui, sequi dicta cumque quidem. Autem dolorem rem molestias impedit error quis iure!
+                    Com o anúncio de The Witcher 4, fãs especulam sobre o retorno de Geralt ou a introdução de um novo protagonista no vasto universo criado por Andrzej Sapkowski. Rumores apontam para uma história inédita, talvez focada em outros bruxos ou na expansão de escolas como a do Lobo ou da Gata. Espera-se uma evolução gráfica significativa, graças ao uso da Unreal Engine 5, com cenários ainda mais imersivos e combates dinâmicos. A narrativa pode explorar escolhas impactantes e múltiplos finais, mantendo a essência que consagrou a franquia. Será este o capítulo que revolucionará os RPGs novamente?
                 </p>
             </div>
             <img class="event__image" src="./images/suposicoes.png" alt="suposicoes">
+        </div>
+    </section>
+    <section class="event event--ui-ux event--image-left">
+        <div class="container">
+            <div class="event__details">
+                <h2 class="event__details__title">Protagonista</h2>
+                <p class="event__details__description">
+                    Com Ciri assumindo o papel de protagonista em The Witcher 4, os fãs aguardam ansiosamente para explorar seu vasto poder como uma viajante entre mundos. A narrativa promete aprofundar sua jornada como uma bruxa, equilibrando responsabilidades, conflitos internos e aventuras épicas em um universo ainda mais perigoso e imprevisível.
+                </p>
+            </div>
+            <img class="event__image" src="./images/protagonista.webp" alt="protagonista">
+        </div>
+    </section>
+    <section class="event event--data-science">
+        <div class="container">
+            <div class="event__details">
+                <h2 class="event__details__title">Jogos anteriores</h2>
+                <p class="event__details__description">
+                    A franquia The Witcher redefiniu o gênero de RPG com seus três jogos anteriores. Desde a introdução de Geralt de Rívia no primeiro título, até o aclamado The Witcher 3: Wild Hunt, a série se destacou por sua narrativa envolvente, escolhas impactantes e um mundo aberto rico em detalhes. Cada jogo elevou o padrão de storytelling e gameplay, conquistando prêmios e uma legião de fãs ao redor do mundo.
+                </p>
+            </div>
+            <img class="event__image" src="./images/jogosAnteriores.jpg" alt="jogos Anteriores">
+        </div>
+    </section>
+    <section class="event event--backend event--image-left">
+        <div class="container">
+            <div class="event__details">
+                <h2 class="event__details__title">Data de lançamento</h2>
+                <p class="event__details__description">
+                    Até o momento, The Witcher 4 ainda não possui uma data oficial de lançamento, mas especula-se que o jogo esteja em desenvolvimento desde 2022, utilizando a Unreal Engine 5. A CD Projekt Red prometeu atualizações regulares sobre o progresso, aumentando a expectativa dos fãs. Com base no cronograma da desenvolvedora, é possível que o lançamento ocorra entre 2025 e 2026, marcando o início de uma nova saga no universo da franquia.
+                </p>
+            </div>
+            <img class="event__image" src="./images/dataLancamento.jpg" alt="Data de Lançamento">
         </div>
     </section>
 
