mudança no html

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,8 @@
             <div class="event__details">
                 <h2 class="event__details__title">Suposições</h2>
                 <p class="event__details__description">
-                    Com o anúncio de The Witcher 4, fãs especulam sobre o retorno de Geralt ou a introdução de um novo protagonista no vasto universo criado por Andrzej Sapkowski. Rumores apontam para uma história inédita, talvez focada em outros bruxos ou na expansão de escolas como a do Lobo ou da Gata. Espera-se uma evolução gráfica significativa, graças ao uso da Unreal Engine 5, com cenários ainda mais imersivos e combates dinâmicos. A narrativa pode explorar escolhas impactantes e múltiplos finais, mantendo a essência que consagrou a franquia. Será este o capítulo que revolucionará os RPGs novamente?</p>
+                    Com o anúncio de The Witcher 4, fãs especulam sobre o retorno de Geralt ou a introdução de um novo protagonista no vasto universo criado por Andrzej Sapkowski. Rumores apontam para uma história inédita, talvez focada em outros bruxos ou na expansão de escolas como a do Lobo ou da Gata. Espera-se uma evolução gráfica significativa, graças ao uso da Unreal Engine 5, com cenários ainda mais imersivos e combates dinâmicos. A narrativa pode explorar escolhas impactantes e múltiplos finais, mantendo a essência que consagrou a franquia. Será este o capítulo que revolucionará os RPGs novamente?
+                </p>
             </div>
             <img class="event__image" src="./images/suposicoes.png" alt="suposicoes">
         </div>
