--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.scss">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
-    
+
     <header class="hero">
         <div class="container">
             <img class="hero__logo" src="./images/witcherlogo.png" alt="cdpr">
@@ -83,6 +84,6 @@
             <img class="event__image" src="./images/dataLancamento.jpg" alt="Data de Lançamento">
         </div>
     </section>
-
+    <script src="scripts/main.js"></script>
 </body>
 </html>
