--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre The Witcher 4</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles/main.scss">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
+
 <body>
 
     <header class="hero">
         <div class="container">
             <img class="hero__logo" src="./images/witcherlogo.png" alt="cdpr">
             <p class="hero__text">
-                O maior jogo de história e aventura vai ganhar uma continuação! 
+                O maior jogo de história e aventura vai ganhar uma continuação!
             </p>
             <div class="infos-bar">
                 <ul class="infos-bar__infos">
@@ -40,12 +44,18 @@
         </div>
     </header>
 
-    <section class="event event--frontend">
+    <section class="event event--frontend" data-aos="fade-right">
         <div class="container">
             <div class="event__details">
                 <h2 class="event__details__title">Suposições</h2>
                 <p class="event__details__description">
-                    Com o anúncio de The Witcher 4, fãs especulam sobre o retorno de Geralt ou a introdução de um novo protagonista no vasto universo criado por Andrzej Sapkowski. Rumores apontam para uma história inédita, talvez focada em outros bruxos ou na expansão de escolas como a do Lobo ou da Gata. Espera-se uma evolução gráfica significativa, graças ao uso da Unreal Engine 5, com cenários ainda mais imersivos e combates dinâmicos. A narrativa pode explorar escolhas impactantes e múltiplos finais, mantendo a essência que consagrou a franquia. Será este o capítulo que revolucionará os RPGs novamente?
+                    Com o anúncio de The Witcher 4, fãs especulam sobre o retorno de Geralt ou a introdução de um novo
+                    protagonista no vasto universo criado por Andrzej Sapkowski. Rumores apontam para uma história
+                    inédita, talvez focada em outros bruxos ou na expansão de escolas como a do Lobo ou da Gata.
+                    Espera-se uma evolução gráfica significativa, graças ao uso da Unreal Engine 5, com cenários ainda
+                    mais imersivos e combates dinâmicos. A narrativa pode explorar escolhas impactantes e múltiplos
+                    finais, mantendo a essência que consagrou a franquia. Será este o capítulo que revolucionará os RPGs
+                    novamente?
                 </p>
             </div>
             <img class="event__image" src="./images/suposicoes.png" alt="suposicoes">
@@ -56,7 +66,10 @@
             <div class="event__details">
                 <h2 class="event__details__title">Protagonista</h2>
                 <p class="event__details__description">
-                    Com Ciri assumindo o papel de protagonista em The Witcher 4, os fãs aguardam ansiosamente para explorar seu vasto poder como uma viajante entre mundos. A narrativa promete aprofundar sua jornada como uma bruxa, equilibrando responsabilidades, conflitos internos e aventuras épicas em um universo ainda mais perigoso e imprevisível.
+                    Com Ciri assumindo o papel de protagonista em The Witcher 4, os fãs aguardam ansiosamente para
+                    explorar seu vasto poder como uma viajante entre mundos. A narrativa promete aprofundar sua jornada
+                    como uma bruxa, equilibrando responsabilidades, conflitos internos e aventuras épicas em um universo
+                    ainda mais perigoso e imprevisível.
                 </p>
             </div>
             <img class="event__image" src="./images/protagonista.webp" alt="protagonista">
@@ -67,7 +80,11 @@
             <div class="event__details">
                 <h2 class="event__details__title">Jogos anteriores</h2>
                 <p class="event__details__description">
-                    A franquia The Witcher redefiniu o gênero de RPG com seus três jogos anteriores. Desde a introdução de Geralt de Rívia no primeiro título, até o aclamado The Witcher 3: Wild Hunt, a série se destacou por sua narrativa envolvente, escolhas impactantes e um mundo aberto rico em detalhes. Cada jogo elevou o padrão de storytelling e gameplay, conquistando prêmios e uma legião de fãs ao redor do mundo.
+                    A franquia The Witcher redefiniu o gênero de RPG com seus três jogos anteriores. Desde a introdução
+                    de Geralt de Rívia no primeiro título, até o aclamado The Witcher 3: Wild Hunt, a série se destacou
+                    por sua narrativa envolvente, escolhas impactantes e um mundo aberto rico em detalhes. Cada jogo
+                    elevou o padrão de storytelling e gameplay, conquistando prêmios e uma legião de fãs ao redor do
+                    mundo.
                 </p>
             </div>
             <img class="event__image" src="./images/jogosAnteriores.jpg" alt="jogos Anteriores">
@@ -78,14 +95,19 @@
             <div class="event__details">
                 <h2 class="event__details__title">Data de lançamento</h2>
                 <p class="event__details__description">
-                    Até o momento, The Witcher 4 ainda não possui uma data oficial de lançamento, mas especula-se que o jogo esteja em desenvolvimento desde 2022, utilizando a Unreal Engine 5. A CD Projekt Red prometeu atualizações regulares sobre o progresso, aumentando a expectativa dos fãs. Com base no cronograma da desenvolvedora, é possível que o lançamento ocorra entre 2025 e 2026, marcando o início de uma nova saga no universo da franquia.
+                    Até o momento, The Witcher 4 ainda não possui uma data oficial de lançamento, mas especula-se que o
+                    jogo esteja em desenvolvimento desde 2022, utilizando a Unreal Engine 5. A CD Projekt Red prometeu
+                    atualizações regulares sobre o progresso, aumentando a expectativa dos fãs. Com base no cronograma
+                    da desenvolvedora, é possível que o lançamento ocorra entre 2025 e 2026, marcando o início de uma
+                    nova saga no universo da franquia.
                 </p>
             </div>
             <img class="event__image" src="./images/dataLancamento.jpg" alt="Data de Lançamento">
         </div>
     </section>
 
-    
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="scripts/main.js"></script>
 </body>
+
 </html>
