--- a/src/index.html
+++ b/src/index.html
@@ -44,8 +44,8 @@
         </div>
     </header>
 
-    <section class="event event--frontend" data-aos="fade-right">
-        <div class="container">
+    <section class="event event--frontend">
+        <div class="container" data-aos="fade-right">
             <div class="event__details">
                 <h2 class="event__details__title">Suposições</h2>
                 <p class="event__details__description">
@@ -62,7 +62,7 @@
         </div>
     </section>
     <section class="event event--ui-ux event--image-left">
-        <div class="container">
+        <div class="container" data-aos="fade-left">
             <div class="event__details">
                 <h2 class="event__details__title">Protagonista</h2>
                 <p class="event__details__description">
@@ -76,7 +76,7 @@
         </div>
     </section>
     <section class="event event--data-science">
-        <div class="container">
+        <div class="container" data-aos="fade-right">
             <div class="event__details">
                 <h2 class="event__details__title">Jogos anteriores</h2>
                 <p class="event__details__description">
@@ -91,7 +91,7 @@
         </div>
     </section>
     <section class="event event--backend event--image-left">
-        <div class="container">
+        <div class="container" data-aos="fade-left">
             <div class="event__details">
                 <h2 class="event__details__title">Data de lançamento</h2>
                 <p class="event__details__description">
