tentativa de deploy

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <img class="hero__logo" src="./images/witcherlogo.png" alt="cdpr">
             <p class="hero__text">
-                O maior jogo de história e aventura vai ganhar uma continuação!
+                The Witcher 4 chegará em (suposição): <span id="contador"></span>
             </p>
             <div class="infos-bar">
                 <ul class="infos-bar__infos">
@@ -87,7 +87,7 @@
                     mundo.
                 </p>
             </div>
-            <img class="event__image"  src="./images/jogosAnteriores.jpg" alt="jogos Anteriores">
+            <img class="event__image" src="./images/jogosAnteriores.jpg" alt="jogos Anteriores">
         </div>
     </section>
     <section class="event event--backend event--image-left">
