setup do projeto aniversario

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre The Witcher 4</title>
+    <title>Níver do Hique</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -18,27 +18,26 @@
 
     <header class="hero">
         <div class="container">
-            <img class="hero__logo" src="./images/witcherlogo.png" alt="cdpr">
             <p class="hero__text">
-                The Witcher 4 chegará em (suposição): <span id="contador"></span>
+                Meu aniversário será em <span id="contador"></span> 
             </p>
             <div class="infos-bar">
                 <ul class="infos-bar__infos">
                     <li class="infos-bar__infos__item">
-                        <b>Desenvolvedora</b>
-                        CD Project Red
+                        <b>Idade</b>
+                        23 anos
                     </li>
                     <li class="infos-bar__infos__item">
-                        <b>Protagonista</b>
-                        Leoazinha de Cintra
+                        <b>Local</b>
+                        Rua Feliz 1234
                     </li>
                     <li class="infos-bar__infos__item">
-                        <B>Data de lançamento</B>
-                        12/12/2025
+                        <B>Data</B>
+                        09/04/2025
                     </li>
                 </ul>
-                <a href="https://www.thewitcher.com/us/pt-br/" class="button button--primary">
-                    Página oficial
+                <a href="https://www.instagram.com/henrique.rossin/" class="button button--primary">
+                    Contato
                 </a>
             </div>
         </div>
@@ -47,62 +46,34 @@
     <section class="event event--frontend">
         <div class="container" data-aos="fade-right">
             <div class="event__details">
-                <h2 class="event__details__title">Suposições</h2>
+                <h2 class="event__details__title">A festa</h2>
                 <p class="event__details__description">
-                    Com o anúncio de The Witcher 4, fãs especulam sobre o retorno de Geralt ou a introdução de um novo
-                    protagonista no vasto universo criado por Andrzej Sapkowski. Rumores apontam para uma história
-                    inédita, talvez focada em outros bruxos ou na expansão de escolas como a do Lobo ou da Gata.
-                    Espera-se uma evolução gráfica significativa, graças ao uso da Unreal Engine 5, com cenários ainda
-                    mais imersivos e combates dinâmicos. A narrativa pode explorar escolhas impactantes e múltiplos
-                    finais, mantendo a essência que consagrou a franquia. Será este o capítulo que revolucionará os RPGs
-                    novamente?
+                    Este ano, meu aniversário vai ser especial e eu adoraria compartilhar esse momento com você! Prepare-se para um evento repleto de diversão, boas risadas e, claro, muita comida deliciosa. Venha comemorar comigo e tornar este dia ainda mais memorável!
                 </p>
             </div>
-            <img class="event__image" src="./images/suposicoes.png" alt="suposicoes">
+            <img class="event__image" src="./images/bolo.jpg" alt="suposicoes">
         </div>
     </section>
     <section class="event event--ui-ux event--image-left">
         <div class="container" data-aos="fade-left">
             <div class="event__details">
-                <h2 class="event__details__title">Protagonista</h2>
+                <h2 class="event__details__title">Detalhes da comemoração</h2>
                 <p class="event__details__description">
-                    Com Ciri assumindo o papel de protagonista em The Witcher 4, os fãs aguardam ansiosamente para
-                    explorar seu vasto poder como uma viajante entre mundos. A narrativa promete aprofundar sua jornada
-                    como uma bruxa, equilibrando responsabilidades, conflitos internos e aventuras épicas em um universo
-                    ainda mais perigoso e imprevisível.
+                    Para tornar essa celebração ainda mais doce, teremos um bolo incrível preparado com muito carinho, além de balões coloridos que vão deixar o ambiente ainda mais festivo. Vai ser uma festa cheia de surpresas e alegrias, com boa música e, claro, uma companhia maravilhosa. Não fique de fora dessa!
                 </p>
             </div>
-            <img class="event__image" src="./images/protagonista.webp" alt="protagonista">
+            <img class="event__image" src="./images/balao.jpg" alt="balões">
         </div>
     </section>
     <section class="event event--data-science">
         <div class="container" data-aos="fade-right">
             <div class="event__details">
-                <h2 class="event__details__title">Jogos anteriores</h2>
+                <h2 class="event__details__title">Como Chegar</h2>
                 <p class="event__details__description">
-                    A franquia The Witcher redefiniu o gênero de RPG com seus três jogos anteriores. Desde a introdução
-                    de Geralt de Rívia no primeiro título, até o aclamado The Witcher 3: Wild Hunt, a série se destacou
-                    por sua narrativa envolvente, escolhas impactantes e um mundo aberto rico em detalhes. Cada jogo
-                    elevou o padrão de storytelling e gameplay, conquistando prêmios e uma legião de fãs ao redor do
-                    mundo.
+                    A festa acontecerá na Rua Feliz, e para garantir que ninguém se perca, preparei um mapa com as direções certinhas para você. Quero que todos cheguem tranquilos e aproveitem cada segundo dessa comemoração. Veja o mapa abaixo e se programe para não faltar a essa festa incrível!
                 </p>
             </div>
-            <img class="event__image" src="./images/jogosAnteriores.jpg" alt="jogos Anteriores">
-        </div>
-    </section>
-    <section class="event event--backend event--image-left">
-        <div class="container" data-aos="fade-left">
-            <div class="event__details">
-                <h2 class="event__details__title">Data de lançamento</h2>
-                <p class="event__details__description">
-                    Até o momento, The Witcher 4 ainda não possui uma data oficial de lançamento, mas especula-se que o
-                    jogo esteja em desenvolvimento desde 2022, utilizando a Unreal Engine 5. A CD Projekt Red prometeu
-                    atualizações regulares sobre o progresso, aumentando a expectativa dos fãs. Com base no cronograma
-                    da desenvolvedora, é possível que o lançamento ocorra entre 2025 e 2026, marcando o início de uma
-                    nova saga no universo da franquia.
-                </p>
-            </div>
-            <img class="event__image" src="./images/dataLancamento.jpg" alt="Data de Lançamento">
+            <img class="event__image" src="./images/mapa.jpg" alt="mapa">
         </div>
     </section>
 
